src/main/java/com/example/darts/errors/WrongDartsmanException.java
package com.example.darts.errors;

public class WrongDartsmanException extends RuntimeException {
}
